--- a/central-js/client/app/service/index/services.html
+++ b/central-js/client/app/service/index/services.html
@@ -74,8 +74,10 @@
        href=""
        ng-if="bAdmin"><span class="glyphicon glyphicon-plus"></span> Додати категорію</a>
 
+
     <div class="row"
          ng-repeat="category in catalog">
+
         <hr ng-if="category.nID>1">
         <h1 style="margin-bottom:0px;margin-top:20px;">{{category.sName}} <a class="ctrls-admin ctrls-cat"
                                                                              href=""
@@ -154,5 +156,8 @@
         <div class="col-md-12"
              ng-if="($index+1)%3 == 0"
              ng-repeat-end></div>
+    </div>
+    <div class="text-center" ng-show="spinner">
+        <img class="text-center" src="/assets/images/loading.gif" alt="Loading" />
     </div>
 </div>
