using enum name in printing template, disable print button when there are empty fields

--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -121,6 +121,7 @@
           </button>
           <button ng-hide="selectedTask.assignee == null"
                   ng-click="print()"
+                  ng-disabled="hasUnPopulatedFields()"
                   class="btn btn-success">Роздрукувати
           </button>
         </p>
