disabling process button if ther are empty fields

--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -117,6 +117,7 @@
           </button>
           <button ng-hide="selectedTask.assignee == null"
                   ng-click="submitTask()"
+                  ng-disabled="hasUnPopulatedFields()"
                   class="btn btn-success">Опрацювати
           </button>
           <button ng-hide="selectedTask.assignee == null"
