--- a/wf-region/src/main/resources/bpmn/dev/webmail-template.html
+++ b/wf-region/src/main/resources/bpmn/dev/webmail-template.html
@@ -42,7 +42,7 @@
                 <!--content statrs-->
                 <tr>
                     <td align="center">
-                        <form action="#" method="post">
+                        <form action="[sURL_ServiceMessage]?nID_Subject=[nID_Subject]&sAccessKey=[sAccessKey]&sData=Название услуги&sMail= &nID_SubjectMessageType=1" method="post">
                         <table width="800" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
                             <tr>
                                 <td style="padding: 35px 120px;">
@@ -50,16 +50,10 @@
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus vel augue eget sodales. Cras ante augue, euismod at tortor vitae, consequat tristique lectus.
                                     </p>
-                                    <p>
-                                        Proin non tellus sed eros efficitur dapibus et ut mauris. Fusce molestie dui turpis, at ullamcorper odio fermentum sit amet. Mauris viverra, urna vel feugiat dapibus, orci mauris faucibus mauris, sit amet sodales felis nisi eu urna. Morbi sodales vitae tortor non pulvinar.
-                                    </p>
-                                    <p>
-                                        Pellentesque consectetur magna enim, id scelerisque nisi imperdiet tempus. Morbi tristique euismod ipsum. Phasellus non varius mauris.
-                                    </p>
                                     <hr style="width: 100%; height: 0; margin: 30px 0 15px 0; background: #dddddd; border: 0; border-bottom: 1px solid #dddddd;" />
                                     <p>
                                         З повагою,<br />
-                                        lectus vel venenatis ultricies, eros augue facilisis odio, nec ornare augue libero sit <a href="#current-page">iGov.org.ua</a>.
+                                        Команда Порталу державних послуг <a href="#current-page">iGov.org.ua</a>.
                                     </p>
                                 </td>
                             </tr>
@@ -68,10 +62,10 @@
                                     <b>Оцените, пожалуйста, насколько Вы удовлетворены качеством предоставления данной услуги, по шкале от 2 до 5:</b>
 
                                     <p style="text-align: center;">
-                                        <label><input type="radio" name="qualityMark" value="2"><span>2</span></label>
-                                        <label><input type="radio" name="qualityMark" value="3"><span>3</span></label>
-                                        <label><input type="radio" name="qualityMark" value="4"><span>4</span></label>
-                                        <label><input type="radio" name="qualityMark" value="5"><span>5</span></label>
+                                        <label><input type="radio" name="sHead" value="2"><span>2</span></label>
+                                        <label><input type="radio" name="sHead" value="3"><span>3</span></label>
+                                        <label><input type="radio" name="sHead" value="4"><span>4</span></label>
+                                        <label><input type="radio" name="sHead" value="5"><span>5</span></label>
                                     </p>
 
                                     <p style="font-size: 13px;">
@@ -83,7 +77,7 @@
                             <tr>
                                 <td style="padding: 0 120px 35px 120px;">
                                     <label><input type="checkbox" name="warnSignal"> Подать сигнал анонимно</label>
-                                    <label style="height: 110px; display: block;"><textarea name="comment"></textarea></label>
+                                    <label style="height: 110px; display: block;"><textarea name="sBody"></textarea></label>
                                 </td>
                             </tr>
                             <tr>
