На главном портале реализовать валидацию поля, которое промаркеровано как Телефон #375

--- a/central-js/client/app/service/city/built-in/bankid.html
+++ b/central-js/client/app/service/city/built-in/bankid.html
@@ -122,10 +122,9 @@
                                        class="form-control_">{{data.formData.params[property.id].value}}</label>
 
                                 <input ng-switch-when="long"
-                                       type="text"
+                                       type="{{!!property.sFieldType?property.sFieldType : 'text'}}"
                                        name="{{property.id}}"
                                        ng-model="data.formData.params[property.id].value"
-                                       ng-pattern="/^\d+$/"
                                        ng-required="property.required"
                                        class="form-control"
                                        value="">
