--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -20,6 +20,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/intl-tel-input/build/css/intlTelInput.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -99,6 +100,8 @@
 <script src="bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
 <script src="bower_components/ng-clip/src/ngClip.js"></script>
 <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
+<script src="bower_components/intl-tel-input/build/js/intlTelInput.min.js"></script>
+<script src="bower_components/intl-tel-input/lib/libphonenumber/build/utils.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
