--- a/central-js/client/app/documents/content.html
+++ b/central-js/client/app/documents/content.html
@@ -158,7 +158,7 @@
                             </div>
 
                             <div class="row"
-                                 ng-if="isPhoneFormVisible == 'true'">
+                                 ng-show="isPhoneFormVisible == 'true'">
                               <div class="form-group"
                                    ng-class="{'has-success': shareLinkForm.phone.$valid}">
                                 <label for="phone">Введіть номер її мобільного телефону
