--- a/central-js/client/app/service/city/built-in/bankid.html
+++ b/central-js/client/app/service/city/built-in/bankid.html
@@ -123,10 +123,9 @@
 
                                        <!--type="{{!!property.sFieldType?property.sFieldType : 'text'}}"-->
                                 <input ng-switch-when="long"
-                                       type="text"
+                                       type="{{!!property.sFieldType?property.sFieldType : 'text'}}"
                                        name="{{property.id}}"
                                        ng-model="data.formData.params[property.id].value"
-                                        ng-pattern="/^\d+$/"
                                        ng-required="property.required"
                                        class="form-control"
                                        value="">
