--- a/central-js/client/app/documents/content.html
+++ b/central-js/client/app/documents/content.html
@@ -107,7 +107,9 @@
                             <div class="col-md-12">
                               <form name="shareLinkForm"
                                     role="form"
-                                    ng-submit="shareLinkForm.$valid && shareLink(doc, sFIO, sTelephone, sMail, nDays)">
+                                    ng-submit="shareLinkForm.$valid && shareLink(doc, sFIO, sTelephone, sMail, nDays)"
+                                    style="text-align:left;"
+                                    >
                                 <div class="row">
                                   <div class="form-group">
                                     <label for="name">Введіть ім’я та прізвище людини, якій Ви надаєте доступ: <em>*</em></label>
