https://github.com/e-government-ua/i/issues/553 -fix default options +

--- a/central-js/client/app/documents/content.html
+++ b/central-js/client/app/documents/content.html
@@ -127,7 +127,7 @@
                                     <label for="valid-days">Введіть термін дії доступу: <em>*</em></label>
                                     <select class="form-control"
                                             required
-                                            ng-model="nDaysOptions[0].title" 
+                                            ng-model="0" 
                                             ng-options="item.day as item.title for item in nDaysOptions"
                                             id="valid-days">
                                     </select>
