#434 fixing close button for print modal

--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -135,7 +135,7 @@
 
 <print-modal show='printTemplate.showPrintModal'
              info='printTemplate.showPrintModal'>
-  <div class="col-md-12">
+  <div>
     <div ng-hide="printTemplate.containsPrintTemplate()">
       <p>Звернення: {{getProcessName(printTemplate.task.processDefinitionId)}}</p>
 
