#518 на главном портале в форме подвязать к типу "select", и id=sID_Public_SubjectOrganJoin сответствующую сущность SubjectOrganJoin

--- a/central-js/client/app/service/city/built-in/bankid.html
+++ b/central-js/client/app/service/city/built-in/bankid.html
@@ -171,6 +171,12 @@
                                              ng-model="data.formData.params[property.id].value"
                                              ng-required="property.required"></slot-picker>
 
+                                <dropdown-organ ng-switch-when="select"
+                                                ng-if="property.id==='sID_Public_SubjectOrganJoin'"
+                                                ng-model="data.formData.params[property.id].value"
+                                                service-data="oServiceData"
+                                                ng-required="property.required"></dropdown-organ>
+
                             </div>
 
                             <div class="col-md-3"
