--- a/central-js/client/app/service/country/built-in/bankid.html
+++ b/central-js/client/app/service/country/built-in/bankid.html
@@ -139,6 +139,13 @@
                                     <div class="filename js-filename"></div>
                                     -->
                                 </p>
+
+                                <dropdown-organ ng-switch-when="select"
+                                                ng-if="property.id==='sID_Public_SubjectOrganJoin'"
+                                                ng-model="data.formData.params[property.id].value"
+                                                service-data="oServiceData"
+                                                ng-required="property.required"></dropdown-organ>
+                              
                             </div>
 
                             <div class="col-md-3"
