--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -111,6 +111,7 @@
 <script src="app/404/404.js"></script>
 <script src="app/about/about.js"></script>
 <script src="app/common/components/dropdown/factories/dropdown.js"></script>
+<script src="app/common/components/form/directives/dropdownOrgan/dropdownOrgan.js"></script>
 <script src="app/common/components/form/directives/file.js"></script>
 <script src="app/common/components/form/directives/file2.js"></script>
 <script src="app/common/components/form/directives/slotPicker.js"></script>
@@ -122,6 +123,7 @@
 <script src="app/common/components/typeahead/directives/typeaheadEmpty.js"></script>
 <script src="app/common/components/typeahead/factories/typeahead.js"></script>
 <script src="app/common/factories/localitylist.factory.js"></script>
+<script src="app/common/factories/organlist.factory.js"></script>
 <script src="app/common/factories/regionlist.factory.js"></script>
 <script src="app/common/services/activiti.service.js"></script>
 <script src="app/common/services/admin.service.js"></script>
