#574 exporting data in csv, adding reports part

--- a/dashboard-js/client/index.html
+++ b/dashboard-js/client/index.html
@@ -22,6 +22,7 @@
       <!-- injector:css -->
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/reports/reports.css">
       <link rel="stylesheet" href="app/tasks/tasks.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <link rel="stylesheet" href="components/print/PrintModal.css">
@@ -69,6 +70,8 @@
           <script src="app/main/error.directive.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/reports/reports.controller.js"></script>
+          <script src="app/reports/reports.js"></script>
           <script src="app/tasks/tasks.controller.js"></script>
           <script src="app/tasks/tasks.file.directive.js"></script>
           <script src="app/tasks/tasks.js"></script>
@@ -80,6 +83,7 @@
           <script src="components/print/PrintModal.directive.js"></script>
           <script src="components/print/PrintTemplate.js"></script>
           <script src="components/process/process.service.js"></script>
+          <script src="components/report/reports.service.js"></script>
           <script src="components/task/task.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
