--- a/dashboard-js/client/app/reports/reports.html
+++ b/dashboard-js/client/app/reports/reports.html
@@ -4,11 +4,26 @@
   <div class="panel-heading">Експорт</div>
   <div class="panel-body">
     <div class="col-xs-12 col-md-8">
-      <div class="col-xs-6 col-sm-3"><label>Період</label></div>
-      <div class="col-xs-6 col-sm-3"><input class="form-control" ng-model="export.from" ng-required="true"></div>
-      <div class="col-xs-6 col-sm-3"><input class="form-control" ng-model="export.to" ng-required="true"></div>
-      <div class="col-xs-6 col-sm-3">
+      <div class="col-xs-6 col-sm-2"><label>Період:</label></div>
+      <div class="col-xs-6 col-sm-2"><input class="form-control" ng-model="export.from" ng-required="true"></div>
+      <div class="col-xs-6 col-sm-2"><input class="form-control" ng-model="export.to" ng-required="true"></div>
+      <div class="col-xs-6 col-sm-2">
         <a ng-href="{{exportLink()}}" class="btn btn-success" target="_self">Експортувати</a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading">Статистика</div>
+  <div class="panel-body">
+    <div class="col-xs-12 col-md-8">
+      <div class="col-xs-6 col-sm-2"><label>Період:</label></div>
+      <div class="col-xs-6 col-sm-2"><input class="form-control" ng-model="export.from" ng-required="true"></div>
+      <div class="col-xs-6 col-sm-2"><input class="form-control" ng-model="export.to" ng-required="true"></div>
+      <div class="col-xs-6 col-sm-3"><input class="form-control" ng-model="export.sBP" ng-required="true"></div>
+      <div class="col-xs-6 col-sm-1"><label>БП:</label></div>
+      <div class="col-xs-6 col-sm-2">
+        <a ng-href="{{statisticLink()}}" class="btn btn-success" target="_self">Зберегти</a>
       </div>
     </div>
   </div>
