https://github.com/e-government-ua/i/issues/560

--- a/dashboard-js/client/app/reports/reports.html
+++ b/dashboard-js/client/app/reports/reports.html
@@ -18,10 +18,10 @@
   <div class="panel-body">
     <div class="col-xs-12 col-md-8">
       <div class="col-xs-6 col-sm-2"><label>Період:</label></div>
-      <div class="col-xs-6 col-sm-2"><input class="form-control" ng-model="export.from" ng-required="true"></div>
-      <div class="col-xs-6 col-sm-2"><input class="form-control" ng-model="export.to" ng-required="true"></div>
-      <div class="col-xs-6 col-sm-3"><input class="form-control" ng-model="export.sBP" ng-required="true"></div>
+      <div class="col-xs-6 col-sm-2"><input class="form-control" ng-model="statistic.from" ng-required="true"></div>
+      <div class="col-xs-6 col-sm-2"><input class="form-control" ng-model="statistic.to" ng-required="true"></div>
       <div class="col-xs-6 col-sm-1"><label>БП:</label></div>
+      <div class="col-xs-6 col-sm-3"><input class="form-control" ng-model="statistic.sBP" ng-required="true"></div>
       <div class="col-xs-6 col-sm-2">
         <a ng-href="{{statisticLink()}}" class="btn btn-success" target="_self">Зберегти</a>
       </div>
