using documents and journal without expilicit access to bankid account data

--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -111,6 +111,7 @@
 <script src="app/404/404.js"></script>
 <script src="app/about/about.js"></script>
 <script src="app/common/components/dropdown/factories/dropdown.js"></script>
+<script src="app/common/components/errors/factories/errors.factory.js"></script>
 <script src="app/common/components/form/directives/dropdownOrgan/dropdownOrgan.js"></script>
 <script src="app/common/components/form/directives/file.js"></script>
 <script src="app/common/components/form/directives/file2.js"></script>
