misprint fix: переведння -> переведення

--- a/central-js/client/app/service/country/absent.html
+++ b/central-js/client/app/service/country/absent.html
@@ -10,7 +10,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <center style="margin-bottom:10px;"><b><span class="text-center">Ви можете допомогти пришвидшити процес переведння послуги в електронний вигляд:</span></b>
+                <center style="margin-bottom:10px;"><b><span class="text-center">Ви можете допомогти пришвидшити процес переведeння послуги в електронний вигляд:</span></b>
                 </center>
                 <table style="vertical-align:top;">
                     <tr>
