--- a/central-js/client/app/service/region/absent.html
+++ b/central-js/client/app/service/region/absent.html
@@ -38,7 +38,7 @@
 
             <div class="col-md-12">
                 <center style="margin-bottom:10px;">
-                    <b><span class="text-center">Ви можете допомогти пришвидшити процес переведння послуги в електронний вигляд:</span></b>
+                    <b><span class="text-center">Ви можете допомогти пришвидшити процес переведeння послуги в електронний вигляд:</span></b>
                 </center>
                 <table style="vertical-align:top;">
                     <tr>
