--- a/central-js/client/app/service/city/absent.html
+++ b/central-js/client/app/service/city/absent.html
@@ -22,7 +22,7 @@
                     Залиште свій email. Ми Вас поінформуємо, як тільки ця послуга буде доступна в електронному вигляді.
                     <div style="margin-top:10px;" class="col-md-12 text-center">
                         <form name="absentMessageForm">
-                            <input type="email" data-ng-model="absentMessage.email" name="email" placeholder="Ваш email:" email-validate required ng-keyup="emailKeydown()" />
+                            <input type="email" data-ng-model="absentMessage.email" name="email" placeholder="Ваш email:" required ng-keyup="emailKeydown()" />
                             <input type="button" data-ng-click="sendAbsentMessage(absentMessageForm, absentMessage)" value="Зберегти" />
                             <div role="alert" ng-if="absentMessage.showErrors">
                                 <span class="error" ng-if="absentMessageForm.email.$error.required">Введіть Вашу email-адресу</span>
