--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -114,6 +114,7 @@
 <script src="app/common/components/form/directives/file.js"></script>
 <script src="app/common/components/form/directives/file2.js"></script>
 <script src="app/common/components/form/directives/slotPicker.js"></script>
+<script src="app/common/components/form/directives/validateEmail.js"></script>
 <script src="app/common/components/form/factories/datepicker.js"></script>
 <script src="app/common/components/form/factories/file.js"></script>
 <script src="app/common/components/form/factories/formData.js"></script>
