issue #505 - start add order

--- a/central-js/client/app/header/header.html
+++ b/central-js/client/app/header/header.html
@@ -43,6 +43,14 @@
                     class="menu-item"
                     ui-sref-active="selected">
                     <a style="margin-top: 5px;"
+                       ui-sref="index.order.search">
+                        <h4>Заявки</h4>
+                    </a>
+                </li>
+                <li style="height: 90px;"
+                    class="menu-item"
+                    ui-sref-active="selected">
+                    <a style="margin-top: 5px;"
                        ui-sref="index.journal.bankid">
                         <h4>Мій журнал</h4>
                     </a>
