--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -145,6 +145,9 @@
 <script src="app/journal/controllers/journalbankid.controller.js"></script>
 <script src="app/journal/controllers/journalcontent.controller.js"></script>
 <script src="app/journal/journal.js"></script>
+<script src="app/order/controllers/order.controller.js"></script>
+<script src="app/order/controllers/ordersearch.controller.js"></script>
+<script src="app/order/order.js"></script>
 <script src="app/service/built-in/controllers/servicebuiltin.controller.js"></script>
 <script src="app/service/built-in/controllers/servicebuiltinbankid.controller.js"></script>
 <script src="app/service/catalog.js"></script>
