delete order from menu

--- a/central-js/client/app/header/header.html
+++ b/central-js/client/app/header/header.html
@@ -39,14 +39,14 @@
                         <h4>Документи</h4>
                     </a>
                 </li>
-                <li style="height: 90px;"
-                    class="menu-item"
-                    ui-sref-active="selected">
-                    <a style="margin-top: 5px;"
-                       ui-sref="index.order.search">
-                        <h4>Заявки</h4>
-                    </a>
-                </li>
+                <!--<li style="height: 90px;"-->
+                    <!--class="menu-item"-->
+                    <!--ui-sref-active="selected">-->
+                    <!--<a style="margin-top: 5px;"-->
+                       <!--ui-sref="index.order.search">-->
+                        <!--<h4>Заявки</h4>-->
+                    <!--</a>-->
+                <!--</li>-->
                 <li style="height: 90px;"
                     class="menu-item"
                     ui-sref-active="selected">
