--- a/central-js/client/app/order/search.html
+++ b/central-js/client/app/order/search.html
@@ -1,10 +1,15 @@
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <h1>Заявки</h1>
+        <p>На цій сторінці Ви можете переглянути статус по своїй заявці за її номером.</p>
         <b style="color: red;">Сервіс в процесі реалізації!</b>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-10">
         <div style="width: 600px;border: 0px; /*border-color: white;*/ /*#ddd;*/" class="panel panel-default">
             <div class="row">
-
                 <div class="col-md-12">
                         <div class="row">
                             <form name="searchForm"
