--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -150,7 +150,7 @@
       <p>від: {{ sDateShort(printTemplate.task.createTime) }}</p>
 
       <p ng-repeat='item in printTemplate.form'>
-        <font ng-if="item.type != 'invisible'">{{sFieldLabel(item.name)}}</<font>
+        <font ng-if="item.type != 'invisible'">{{sFieldLabel(item.name)}}</font>
         <b ng-if="item.type == 'enum'">{{sEnumValue(item.enumValues,item.value)}}</b>
         <b ng-if="item.type != 'enum' && item.type != 'invisible'">{{item.value}}</b>
       </p>
