--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -110,6 +110,7 @@
 <!-- injector:js -->
 <script src="app/404/404.js"></script>
 <script src="app/about/about.js"></script>
+<script src="app/app.states.js"></script>
 <script src="app/common/components/dropdown/factories/dropdown.js"></script>
 <script src="app/common/components/errors/factories/errors.factory.js"></script>
 <script src="app/common/components/form/directives/dropdownOrgan/dropdownOrgan.js"></script>
@@ -133,6 +134,7 @@
 <script src="app/common/services/place.service.js"></script>
 <script src="app/common/services/places.service.js"></script>
 <script src="app/common/services/service.service.js"></script>
+<script src="app/common/states/statesRepository.provider.js"></script>
 <script src="app/documents/controllers/documents.controller.js"></script>
 <script src="app/documents/controllers/documentsbankid.controller.js"></script>
 <script src="app/documents/controllers/documentscontent.controller.js"></script>
