issue #505 - add message

--- a/central-js/client/app/order/search.html
+++ b/central-js/client/app/order/search.html
@@ -46,7 +46,7 @@
 
                     <div ng-show="orders.length > 0">
                         <div>
-                            Тип заявки: Услуги
+                            Тип заявки: Услуга
                         </div>
                         <table class="table table-striped">
                             <thead>
