--- a/central-js/client/app/order/search.html
+++ b/central-js/client/app/order/search.html
@@ -64,7 +64,7 @@
 
                             <tr id="document">
                                 <td>
-                                    {{ or.sDate | date: 'dd MMMM yyyy HH:mm'}}
+                                    {{ or.sDateEdit | date: 'dd MMMM yyyy HH:mm'}}
                                 </td>
                                 <td>
                                     {{or.sID_Status}}
