--- a/central-js/client/app/service/city/absent.html
+++ b/central-js/client/app/service/city/absent.html
@@ -21,8 +21,8 @@
                 <td style="vertical-align:top;width:50%;">
                     Залиште свій email. Ми Вас поінформуємо, як тільки ця послуга буде доступна в електронному вигляді.
                     <div style="margin-top:10px;" class="col-md-12 text-center">
-                        <form name="absentMessageForm" novalidate>
-                            <input type="email" data-ng-model="absentMessage.email" name="email" placeholder="Ваш email:" validate-email required ng-keyup="emailKeydown()" data-marker="validateMe" />
+                        <form name="absentMessageForm" class="email-absent-form" novalidate>
+                            <input type="email" data-ng-model="absentMessage.email" name="email" id="email" placeholder="Ваш email:" required ng-keyup="emailKeydown()" data-marker="validateMe" ng-model-options="{ updateOn: 'blur' }" />
                             <input type="button" data-ng-click="sendAbsentMessage(absentMessageForm, absentMessage)" value="Зберегти" />
                             <div role="alert" ng-if="absentMessage.showErrors">
                                 <span class="error" ng-if="absentMessageForm.email.$error.required">Введіть Вашу email-адресу</span>
