--- a/central-js/client/app/about/about.html
+++ b/central-js/client/app/about/about.html
@@ -599,8 +599,11 @@
 
                 <p dir="ltr"
                    style="line-height:1.7999999999999998;margin-top:5pt;margin-bottom:0pt;">
-                    <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Якщо ви маєте досвід у розробці ІТ-продуктів та бажаєте приєднатися до команди ІТ-волонтерів, запрошуємо Вас заповнити цю </span><a href="https://docs.google.com/a/privatbank.ua/forms/d/1gwhSfGp3SyBXctFQ_VZQy4o9bbPY9Kw8ujbW4FuqhcU/viewform"
-                                                                                                                                                                                                                                                                                                                      style="text-decoration:none;"><span style="color: rgb(17, 85, 204); text-decoration: underline; vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">форму</span></a><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">.</span></span>
+                    <span>
+                        <span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">
+                            Якщо ви маєте досвід у розробці ІТ-продуктів та бажаєте приєднатися до команди ІТ-волонтерів, запрошуємо Вас заповнити цю</span>
+                        <a href="https://docs.google.com/a/privatbank.ua/forms/d/1gwhSfGp3SyBXctFQ_VZQy4o9bbPY9Kw8ujbW4FuqhcU/viewform"
+                           style="text-decoration:none;"><span style="color: rgb(17, 85, 204); text-decoration: underline; vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">форму</span></a><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">.</span></span>
                 </p>
 
                 <div>
