validation service added

--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -121,7 +121,6 @@
 <script src="app/common/components/form/directives/file.js"></script>
 <script src="app/common/components/form/directives/file2.js"></script>
 <script src="app/common/components/form/directives/slotPicker.js"></script>
-<script src="app/common/components/form/directives/validateEmail.js"></script>
 <script src="app/common/components/form/factories/datepicker.js"></script>
 <script src="app/common/components/form/factories/file.js"></script>
 <script src="app/common/components/form/factories/formData.js"></script>
@@ -139,6 +138,7 @@
 <script src="app/common/services/place.service.js"></script>
 <script src="app/common/services/places.service.js"></script>
 <script src="app/common/services/service.service.js"></script>
+<script src="app/common/services/validation.service.js"></script>
 <script src="app/common/states/statesRepository.provider.js"></script>
 <script src="app/documents/controllers/documents.controller.js"></script>
 <script src="app/documents/controllers/documentsbankid.controller.js"></script>
