--- a/central-js/client/app/service/region/absent.html
+++ b/central-js/client/app/service/region/absent.html
@@ -62,12 +62,14 @@
                         <div style="margin-top:10px;"
                              class="col-md-12 text-center">
                             <form name="absentMessageForm">
-                                <input type="email"
-                                       data-ng-model="absentMessage.email"
-                                       name="email"
-                                       placeholder="Ваш email"
-                                       required
-                                       ng-keyup="emailKeydown()"/>
+                                <input type="email" 
+                                       data-ng-model="absentMessage.email" 
+                                       name="email" 
+                                       placeholder="Ваш email:" 
+                                       required 
+                                       ng-keyup="emailKeydown($event, absentMessageForm, absentMessage)"
+                                       ng-model-options="{ updateOn: 'blur' }" />
+                                       
                                 <input type="button"
                                        data-ng-click="sendAbsentMessage(absentMessageForm, absentMessage)"
                                        value="Зберегти"/>
