--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -64,7 +64,7 @@
 
     <div class="text-center"
          ng-if="false">
-        <img class="text-center"
+        <img class="text-center site-preloader"
              src="assets/images/loading.gif"
              alt="Loading"/>
     </div>
