--- a/central-js/client/app/service/index.html
+++ b/central-js/client/app/service/index.html
@@ -33,7 +33,7 @@
     </div>
     <div ui-view="content">
         <div class="text-center">
-            <img class="text-center"
+            <img class="text-center section-preloader"
                  src="assets/images/loading.gif"
                  alt="Loading"/>
         </div>
